# lineinradio

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  run.sh  setup.sh
lineinradio/: asgi.py  settings.py  urls.py  wsgi.py
media/showbanners/: .gitignore
radio/: apps.py  consumers.py  mpd.conf  routing.py  tasks.py
scheduler/: admin.py  models.py  tasks.py  urls.py  views.py
scheduler/management/commands/: registertasks.py
scheduler/migrations/: 0001_initial.py
scheduler/templates/: schedule.html  scheduleeditor.html  slot.html
website/: admin.py  forms.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py  0002_alter_episode_audiofile_alter_show_show_theme.py  0003_alter_dj_profile_theme.py  0004_alter_episode_name_alter_show_name.py  0005_alter_dj_bio_alter_episode_description_and_more.py  0006_remove_slot_episode_delete_schedule_delete_slot.py
website/static/: radio.js  styles.css
website/templates/: about.html  createepisode.html  createshow.html  customizer.html  djs.html  editepisode.html  editshow.html  header.html  index.html  login.html  noblank.html  profile.html  register.html  settings.html  show.html  shows.html
